# polyVERSE

./: README.md
Other/: melt_viscosity_dataset.csv
Other/AM_Thermoset_Active_Learning/: Active_Learning_Thermosets.csv
Other/AM_hardness/: README.md  check_data.py  combined_dft_exp.csv  only_exp_data.csv
Other/Atomization_enthalpy/: README.md  atomization_enthalpy_202412051524.csv
Other/Cohesive_energy_density/: Cohesive_energy_density_2025_06_23.csv  README.md
Other/Conductivity_anionic_aging/: README.md  aem_aging.csv
Other/Conductivity_anionic_water_uptake_swelling/: AEM_anion_conductivity_WU_Swelling.csv  README.md
Other/Electron_Affinity/: electron_affinity_202412051526.csv  readme.md
Other/Gas_permeability_solubility_diffusivity/: Gas_permeability_solubility_diffusivity_long.csv  Gas_permeability_solubility_diffusivity_wide.csv  amorphous_polymer_solubility.lmps  gas_diffusivity.in  master_transport_2025_08_13.csv  readme.MD
Property-database/Virtual-Polymer/VFS/ROP/packaging_replacements/: README.md  pyproject.toml  react.ipynb  reaction_procedure.json
ROP/: README.md
Virtual-Polymer/VFS/ROMP_and_polyimide/Code_to_generate_structures/: README.md  pyproject.toml
Virtual-Polymer/VFS/ROMP_and_polyimide/Code_to_generate_structures/data/: README.md  romp_polymers.csv  romp_polymers.json
Virtual-Polymer/VFS/ROMP_and_polyimide/Code_to_generate_structures/polyverse/: __init__.py  constants.py  constraints.py  polymerize.py  utils.py
Virtual-Polymer/VFS/ROMP_and_polyimide/Code_to_generate_structures/tests/: test_polyverse.py
(+64 files in other folders)
